CMF 2.1.0-beta2 (unreleased)

  Bug Fixes

    - Favorite: Fixed UID handling broken in 2.1.0-beta.

    - CMFDefault: Removed CMFUid dependency inadvertently added in 2.1.0-beta.

    - CMFActionIcons: Fixed interface declarations added in 2.1.0-beta.

  Other

    - CMFUid.UniqueIdAnnotationTool: Annotation handling has been switched
      from triggering it through old-style manage_*-methods to using
      events. UID assigning behavior has been made more flexible. Please
      review CMFUid/README.txt for information about the current
      behavior and the new features. 
      (http://www.zope.org/Collectors/CMF/474)


CMF 2.1.0-beta (2007/03/09)

  IMPORTANT NOTE:

    If you upgrade an existing CMF instance to CMF 2.1, please see
    INSTALL.txt for instructions on how to run a separate upgrade script.

  New Features

    - CMFCalendar: Zope3 style browser views are now used by default.
      An additional setup profile allows you to hook up the oldstyle skins and
      to make customizations TTW.

    - DirectoryView: Added 'registerDirectory' ZCML directive.
      Using the old registerDirectory method in __init__.py is now deprecated.
      See zcml.IRegisterDirectoryDirective for details.

    - DirectoryView: Added support for non-product packages.
      This introduces new registry keys. Old registry keys stored in
      persistent DirectoryView objects are updated on the fly.
      (http://www.zope.org/Collectors/CMF/467)

    - Document: Added two new methods for safety belt handling.

    - setup handlers: Improved properties handler.
      It now works with properties using a default_charset other than UTF-8.

    - Merged patches from Martin Aspeli to enable generating events before
      and after DCWorkflow transitions, and in the 'notify' methods of the
      workflow tool (http://www.zope.org/Collectors/CMF/461).

  Bug Fixes

    - CMFUid.UniqueIdHandlerTool: Touching the internal UID value on a